2008-02-20  Alexander Larsson  <alexl@redhat.com>

        * daemon/Makefile.am:
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsbackendsmbbrowse.c:
	If gconf availible, initialize default workgroup
	from gconf.
	Handle X-GNOME-DEFAULT-WORKGROUP special case
	to list the current workgroup

2008-02-20  Alexander Larsson  <alexl@redhat.com>

	* daemon/daemon-main.c (send_spawned):
	Fix "_" spew.
	
2008-02-20  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendsftp.c:
	Fix spelling in string

2008-02-20  Alexander Larsson  <alexl@redhat.com>

        * common/gmountsource.[ch]:
	Add ask_question support

        * daemon/gvfsbackendsftp.c:
	Handle host identity changed messages (#517460)

	Patch from Carlos Garcia Campos

2008-02-20  Alexander Larsson  <alexl@redhat.com>

        * daemon/Makefile.am:
        * daemon/gvfsbackendnetwork.[ch]:
        * daemon/network.mount.in: 
	Initial network backend work (#509600)

2008-02-19  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Authentication fixups (#511517)
	Patch from Carlos Garcia Campos

2008-02-19  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendtrash.c:
        * gconf/gapplookupgconf.c:
        * test/benchmark-common.c:
	Some more cleanup.

2008-02-19  Alexander Larsson  <alexl@redhat.com>

	* lots of *.c files:
	Code cleanup from Kjartan:
	Removes unused code/variables.
	Uses right printf types
	Uses non-deprecated dbus calls.
	Removes spurious ; and ,
	deleted extra checks for NULL for g_free

2008-02-18  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalmount.c:
	Cleanups of case insensitive search. (#154549)
	patch from John Millikin.

2008-02-18  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsjobenumerate.c (g_vfs_job_enumerate_add_info):
	Ensure we're using "/" as separator for uris.
	This only affects win32, which probably doesn't work atm, but
	still its nice to be explicit.
	